Refactor
Longer variable names in controller and specs
Change route for district demographics in year to be more RESTful
